# skin-diagnosis-platform

./: .gitignore  README.md  docker-compose.yml  init.sql  pom.xml  run-with-newrelic.bat
docs/: architecture.md
iot-device/: CMakeLists.txt  README.md
iot-device/include/: Config.h  HardwareAbstraction.h  HttpClient.h  SkinSensor.h
iot-device/src/: HttpClient.cpp  SkinSensor.cpp  main.cpp
monitoring/cloudwatch/: amazon-cloudwatch-agent.json  cloudwatch-alarms.json
monitoring/newrelic/: newrelic.yml
newrelic/: newrelic.yml
scripts/: deploy.sh  setup-monitoring.sh
src/main/java/lsj/spring/project/controller/: IoTApiController.java
src/main/java/lsj/spring/project/dto/: ApiResponse.java  SkinAnalysisRequest.java  TreatmentDataRequest.java
src/main/java/lsj/spring/project/interceptor/: ApiKeyInterceptor.java
src/main/resources/: application.properties
src/main/webapp/WEB-INF/spring/: root-context.xml  servlet-context.xml
